# flask-doc-api

./: .rest  README.md  pyproject.toml
app/: __init__.py  routes.py
app/resources/: index.py
